# BackEnd

stopMoving/: .gitignore  idf.json  pyproject.toml  run_with_tunnel.py  stopMoving_dev
stopMoving/accounts/: models.py  serializers.py  urls.py  views.py
stopMoving/accounts/migrations/: 0001_initial.py  0002_user_nickname.py  0003_alter_user_nickname.py  0004_user_is_survey.py
stopMoving/bookinfo/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
stopMoving/bookinfo/migrations/: 0001_initial.py  0002_bookinfo_sale_price.py  0003_bookinfolibrary.py
stopMoving/bookinfo/service/: aladin_ingest.py
stopMoving/bookinfo/services/: aladin_ingest.py
stopMoving/books/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
stopMoving/books/migrations/: 0001_initial.py  0002_alter_book_status.py  0003_book_sale_price.py
stopMoving/config/: exceptions.py  middleware.py  responses.py  settings.py  urls.py
stopMoving/core/: aladin_client.py
stopMoving/nip/services/: cosine.py  embedding.py  keyword_extractor.py
stopMoving/notification/: models.py  serializers.py  service.py  urls.py  views.py
stopMoving/notification/migrations/: 0001_initial.py  0002_notification_is_read_notification_read_at.py
stopMoving/posts/: urls.py  views.py
stopMoving/preferences/: apps.py  idf.json  serializers.py  urls.py  views.py
stopMoving/preferences/services/: embeddings.py  idf.json  keyword_extractor.py  recommend.py
stopMoving/recommendations/: urls.py
stopMoving/reservations/: admin.py  models.py  serializers.py  urls.py  views.py
stopMoving/reservations/migrations/: 0001_initial.py
stopMoving/src/stopmoving/: logging_config.py
stopMoving/surveys/: models.py  serializers.py  services.py  urls.py  views.py
stopMoving/surveys/migrations/: 0001_initial.py
stopMoving/users/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
stopMoving/users/migrations/: 0001_initial.py  0002_remove_userbook_users_userb_isbn_14d16a_idx_and_more.py  0002_userbook_book_alter_userbook_user_and_more.py  0003_alter_userbook_book_alter_userbook_user.py  0003_userbook_library_id.py  0004_remove_userbook_users_userb_user_id_4d5199_idx_and_more.py  0004_userbook_created_at_and_more.py  0005_alter_userbook_created_at.py  0006_userimage.py  0007_userinfo_my_lib.py  (+7 more)
stopMoving/vector_data/: stopwords_ko.txt  vectorizer.pkl
(+10 files in other folders)
