[project]
name = "stopmoving"
version = "0.1.0"
description = ""
authors = [
    {name = "jjjaehong",email = "woghd3014@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)"
]

[tool.poetry]
packages = [{include = "stopmoving", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
